new hashmax + utility + clean up pj